@@ -429,101 +429,6 @@ contains
 
   end function loncorrect
 
-  !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-  subroutine proj_write_restart(proj,unit)
-
-    !*FD Write the part of the
-    !*FD restart file relating to the {\tt projection}.
-    !*FD Note that the file unit specified must be already
-    !*FD open to an unformatted file.
-
-    type(projection),intent(in) :: proj !*FD Projection type to be written
-    integer,intent(in) :: unit          !*FD Logical file unit to use
-
-    write(unit) proj%p_type
-    write(unit) proj%nx
-    write(unit) proj%ny
-    write(unit) proj%dx
-    write(unit) proj%dy
-    write(unit) proj%cpx
-    write(unit) proj%cpy
-    write(unit) proj%latc
-    write(unit) proj%lonc
-    write(unit) proj%sintheta
-    write(unit) proj%costheta
-    write(unit) proj%latitudes
-
-    ! GMT parameters
-
-    write(unit) proj%gmt_params% cosp
-    write(unit) proj%gmt_params% sinp
-    write(unit) proj%gmt_params% pole
-    write(unit) proj%gmt_params% central_meridian
-    write(unit) proj%gmt_params% EQ_RAD
-    write(unit) proj%gmt_params% i_EQ_RAD
-    write(unit) proj%gmt_params% Dx
-    write(unit) proj%gmt_params% Dy
-    write(unit) proj%gmt_params% iDx
-    write(unit) proj%gmt_params% iDy
-    write(unit) proj%gmt_params% s_c
-    write(unit) proj%gmt_params% s_ic
-    write(unit) proj%gmt_params% n_polar
-    write(unit) proj%gmt_params% s_polar
-    write(unit) proj%gmt_params% north_pole
-    write(unit) proj%gmt_params% polar
-
-  end subroutine proj_write_restart
-
-  !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-  subroutine proj_read_restart(proj,unit)
-
-    !*FD Read the part of the
-    !*FD restart file relating to the projection
-    !*FD Note that the file unit specified must be already
-    !*FD open to an unformatted file.
-
-    type(projection),intent(inout) :: proj !*FD Projection to be read
-    integer,intent(in) :: unit             !*FD Logical file unit to use
-
-    read(unit) proj%p_type
-    read(unit) proj%nx
-    read(unit) proj%ny
-    read(unit) proj%dx
-    read(unit) proj%dy
-    read(unit) proj%cpx
-    read(unit) proj%cpy
-    read(unit) proj%latc
-    read(unit) proj%lonc
-
-    call proj_allocate(proj)
-
-    read(unit) proj%sintheta
-    read(unit) proj%costheta
-    read(unit) proj%latitudes
-
-    ! GMT parameters
-
-    read(unit) proj%gmt_params% cosp
-    read(unit) proj%gmt_params% sinp
-    read(unit) proj%gmt_params% pole
-    read(unit) proj%gmt_params% central_meridian
-    read(unit) proj%gmt_params% EQ_RAD
-    read(unit) proj%gmt_params% i_EQ_RAD
-    read(unit) proj%gmt_params% Dx
-    read(unit) proj%gmt_params% Dy
-    read(unit) proj%gmt_params% iDx
-    read(unit) proj%gmt_params% iDy
-    read(unit) proj%gmt_params% s_c
-    read(unit) proj%gmt_params% s_ic
-    read(unit) proj%gmt_params% n_polar
-    read(unit) proj%gmt_params% s_polar
-    read(unit) proj%gmt_params% north_pole
-    read(unit) proj%gmt_params% polar
-
-  end subroutine proj_read_restart
-
   !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
   subroutine proj_write_ncdf_mapping(proj,ncid,name)
